--- a/sections/image-banner.liquid
+++ b/sections/image-banner.liquid
@@ -1,251 +1,257 @@
-{%- ########################################################################## 
-    # Label: Mobile image
-    # Returns: an image object or nil(if no selection has been made)
-    # Image Properties: https://shopify.dev/api/liquid/objects#image
-    # Image Filters: https://shopify.dev/api/liquid/filters#image_tag, https://shopify.dev/api/liquid/filters#image_url
-    ########################################################################## -%}
-    {%- assign mobile_image = section.settings.mobile_image -%}
-    {{ mobile_image | image_url: width: mobile_image.width | image_tag: class: 'add_your_class_here', loading: 'lazy' }}
-    
-    {%- ########################################################################## 
-    # Label: Desktop image
-    # Returns: an image object or nil(if no selection has been made)
-    # Image Properties: https://shopify.dev/api/liquid/objects#image
-    # Image Filters: https://shopify.dev/api/liquid/filters#image_tag, https://shopify.dev/api/liquid/filters#image_url
-    ########################################################################## -%}
-    {%- assign desktop_image = section.settings.desktop_image -%}
-    {{ desktop_image | image_url: width: desktop_image.width | image_tag: class: 'add_your_class_here', loading: 'lazy' }}
-    
-    {%- ########################################################################## 
-    # Label: Badge
-    # Returns: an image object or nil(if no selection has been made)
-    # Image Properties: https://shopify.dev/api/liquid/objects#image
-    # Image Filters: https://shopify.dev/api/liquid/filters#image_tag, https://shopify.dev/api/liquid/filters#image_url
-    ########################################################################## -%}
-    {%- assign badge = section.settings.badge -%}
-    {{ badge | image_url: width: badge.width | image_tag: class: 'add_your_class_here', loading: 'lazy' }}
-    
-    {%- ########################################################################## 
-    # Label: Badge position
-    # Returns a string. i.e. the value of the selected option
-    # Filters: https://shopify.dev/api/liquid/objects#string
-    ########################################################################## -%}
-    {{ section.settings.badge_position }} 
-    
-    {%- for block in section.blocks -%}
-      {%- case block.type -%}
-    
-        {%- when 'desktop_title' -%}
-          {%- ########################################################################## 
-          # Label: Title
-          # Returns: a string or an empty object(if nothing has been entered)
-          # Filters: https://shopify.dev/api/liquid/objects#string 
-          ########################################################################## -%}
-          {{ block.settings.title }} 
-    
-          {%- ########################################################################## 
-          # Label: Title color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.title_color }} 
-    
-        {%- when 'mobile_title' -%}
-          {%- ########################################################################## 
-          # Label: Title
-          # Returns: a string or an empty object(if nothing has been entered)
-          # Filters: https://shopify.dev/api/liquid/objects#string 
-          ########################################################################## -%}
-          {{ block.settings.title }} 
-    
-          {%- ########################################################################## 
-          # Label: Title color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.title_color }} 
-    
-        {%- when 'description' -%}
-          {%- ########################################################################## 
-          # Label: Description
-          # Returns: a string or an empty object(if nothing has been entered)
-          # Filters: https://shopify.dev/api/liquid/objects#string 
-          ########################################################################## -%}
-          {{ block.settings.description }} 
-    
-          {%- ########################################################################## 
-          # Label: Color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.color }} 
-    
-        {%- when 'button' -%}
-          {%- ########################################################################## 
-          # Label: Text
-          # Returns: a string or an empty object(if nothing has been entered)
-          # Filters: https://shopify.dev/api/liquid/objects#string 
-          ########################################################################## -%}
-          {{ block.settings.text }} 
-    
-          {%- ########################################################################## 
-          # Label: URL
-          # Returns: a string(the entered URL) or nil / false(if nothing has been entered)
-          ########################################################################## -%}
-          {{ block.settings.url }} 
-    
-          {%- ########################################################################## 
-          # Label: Color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.color }} 
-    
-          {%- ########################################################################## 
-          # Label: Border color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.border_color }} 
-    
-          {%- ########################################################################## 
-          # Label: Background color
-          # Returns: a color object or blank(if no selection has been made)
-          # Color Properties: https://shopify.dev/api/liquid/objects#color
-          ########################################################################## -%}
-          {{ block.settings.background_color }} 
-    
-      {%- endcase -%}
-    {%- endfor -%}
-    
-    {% schema %}
-      {
-      "name": "image-banner",
-      "class": "shopify-image-banner",
+{% liquid
+  ##########################################################################
+  # Label: Mobile image
+  # Returns: an image object or nil (if no selection has been made)
+  # Image Properties: https: //shopify.dev/api/liquid/objects#image
+  # Image Filters: https: //shopify.dev/api/liquid/filters#image_tag, https: //shopify.dev/api/liquid/filters#image_url
+  ##########################################################################
+  assign mobile_image = section.settings.mobile_image
+  if mobile_image != blank
+    echo mobile_image | image_url: width: mobile_image.width | image_tag: class: 'add_your_class_here', loading: 'lazy'
+  endif
+
+  ##########################################################################
+  # Label: Desktop image
+  # Returns: an image object or nil (if no selection has been made)
+  # Image Properties: https: //shopify.dev/api/liquid/objects#image
+  # Image Filters: https: //shopify.dev/api/liquid/filters#image_tag, https: //shopify.dev/api/liquid/filters#image_url
+  ##########################################################################
+  assign desktop_image = section.settings.desktop_image
+  if desktop_image != blank
+    echo desktop_image | image_url: width: desktop_image.width | image_tag: class: 'add_your_class_here', loading: 'lazy'
+  endif
+
+  ##########################################################################
+  # Label: Badge
+  # Returns: an image object or nil (if no selection has been made)
+  # Image Properties: https: //shopify.dev/api/liquid/objects#image
+  # Image Filters: https: //shopify.dev/api/liquid/filters#image_tag, https: //shopify.dev/api/liquid/filters#image_url
+  ##########################################################################
+  assign badge = section.settings.badge
+  if badge != blank
+    echo badge | image_url: width: badge.width | image_tag: class: 'add_your_class_here', loading: 'lazy'
+  endif
+
+  ##########################################################################
+  # Label: Badge position
+  # Returns a string. i.e., the value of the selected option
+  # Filters: https: //shopify.dev/api/liquid/objects#string
+  ##########################################################################
+  echo section.settings.badge_position
+
+  for block in section.blocks
+    case block.type
+      when 'desktop_title'
+        ##########################################################################
+        # Label: Title
+        # Returns: a string or an empty object (if nothing has been entered)
+        # Filters: https: //shopify.dev/api/liquid/objects#string
+        ##########################################################################
+        echo block.settings.title
+
+        ##########################################################################
+        # Label: Title color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.title_color
+
+      when 'mobile_title'
+        ##########################################################################
+        # Label: Title
+        # Returns: a string or an empty object (if nothing has been entered)
+        # Filters: https: //shopify.dev/api/liquid/objects#string
+        ##########################################################################
+        echo block.settings.title
+
+        ##########################################################################
+        # Label: Title color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.title_color
+
+      when 'description'
+        ##########################################################################
+        # Label: Description
+        # Returns: a string or an empty object (if nothing has been entered)
+        # Filters: https: //shopify.dev/api/liquid/objects#string
+        ##########################################################################
+        echo block.settings.description
+
+        ##########################################################################
+        # Label: Color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.color
+
+      when 'button'
+        ##########################################################################
+        # Label: Text
+        # Returns: a string or an empty object (if nothing has been entered)
+        # Filters: https: //shopify.dev/api/liquid/objects#string
+        ##########################################################################
+        echo block.settings.text
+
+        ##########################################################################
+        # Label: URL
+        # Returns: a string (the entered URL) or nil / false (if nothing has been entered)
+        ##########################################################################
+        echo block.settings.url
+
+        ##########################################################################
+        # Label: Color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.color
+
+        ##########################################################################
+        # Label: Border color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.border_color
+
+        ##########################################################################
+        # Label: Background color
+        # Returns: a color object or blank (if no selection has been made)
+        # Color Properties: https: //shopify.dev/api/liquid/objects#color
+        ##########################################################################
+        echo block.settings.background_color
+    endcase
+  endfor
+%}
+
+{% schema %}
+{
+  "name": "image-banner",
+  "class": "shopify-image-banner",
+  "settings": [
+    {
+      "type": "image_picker",
+      "id": "mobile_image",
+      "label": "Mobile image"
+    },
+    {
+      "type": "image_picker",
+      "id": "desktop_image",
+      "label": "Desktop image"
+    },
+    {
+      "type": "image_picker",
+      "id": "badge",
+      "label": "Badge"
+    },
+    {
+      "type": "select",
+      "id": "badge_position",
+      "label": "Badge position",
+      "options": [
+        {
+          "value": "left",
+          "label": "left"
+        },
+        {
+          "value": "right",
+          "label": "right"
+        }
+      ],
+      "default": "left"
+    }
+  ],
+  "blocks": [
+    {
+      "name": "Desktop title",
+      "type": "desktop_title",
       "settings": [
         {
-          "type": "image_picker",
-          "id": "mobile_image",
-          "label": "Mobile image"
+          "type": "text",
+          "id": "title",
+          "label": "Title"
         },
         {
-          "type": "image_picker",
-          "id": "desktop_image",
-          "label": "Desktop image"
-        },
-        {
-          "type": "image_picker",
-          "id": "badge",
-          "label": "Badge"
-        },
-        {
-          "type": "select",
-          "id": "badge_position",
-          "label": "Badge position",
-          "options": [
-            {
-              "value": "left",
-              "label": "left"
-            },
-            {
-              "value": "right",
-              "label": "right"
-            }
-          ],
-          "default": "left"
-        }
-      ],
-      "blocks": [
-        {
-          "name": "Desktop title",
-          "type": "desktop_title",
-          "settings": [
-            {
-              "type": "text",
-              "id": "title",
-              "label": "Title"
-            },
-            {
-              "type": "color",
-              "id": "title_color",
-              "label": "Title color"
-            }
-          ]
-        },
-        {
-          "name": "Mobile title",
-          "type": "mobile_title",
-          "settings": [
-            {
-              "type": "text",
-              "id": "title",
-              "label": "Title"
-            },
-            {
-              "type": "color",
-              "id": "title_color",
-              "label": "Title color"
-            }
-          ]
-        },
-        {
-          "name": "Description",
-          "type": "description",
-          "settings": [
-            {
-              "type": "richtext",
-              "id": "description",
-              "label": "Description"
-            },
-            {
-              "type": "color",
-              "id": "color",
-              "label": "Color"
-            }
-          ]
-        },
-        {
-          "name": "Button",
-          "type": "button",
-          "settings": [
-            {
-              "type": "text",
-              "id": "text",
-              "label": "Text"
-            },
-            {
-              "type": "url",
-              "id": "url",
-              "label": "URL"
-            },
-            {
-              "type": "color",
-              "id": "color",
-              "label": "Color"
-            },
-            {
-              "type": "color",
-              "id": "border_color",
-              "label": "Border color"
-            },
-            {
-              "type": "color",
-              "id": "background_color",
-              "label": "Background color"
-            }
-          ]
-        }
-      ],
-      "presets": [
-        {
-          "name": "image-banner"
+          "type": "color",
+          "id": "title_color",
+          "label": "Title color"
         }
       ]
-    }  
-    {% endschema %}
-    
-    {% stylesheet %}
-    {% endstylesheet %}
-    
-    {% javascript %}
-    {% endjavascript %}
+    },
+    {
+      "name": "Mobile title",
+      "type": "mobile_title",
+      "settings": [
+        {
+          "type": "text",
+          "id": "title",
+          "label": "Title"
+        },
+        {
+          "type": "color",
+          "id": "title_color",
+          "label": "Title color"
+        }
+      ]
+    },
+    {
+      "name": "Description",
+      "type": "description",
+      "settings": [
+        {
+          "type": "richtext",
+          "id": "description",
+          "label": "Description"
+        },
+        {
+          "type": "color",
+          "id": "color",
+          "label": "Color"
+        }
+      ]
+    },
+    {
+      "name": "Button",
+      "type": "button",
+      "settings": [
+        {
+          "type": "text",
+          "id": "text",
+          "label": "Text"
+        },
+        {
+          "type": "url",
+          "id": "url",
+          "label": "URL"
+        },
+        {
+          "type": "color",
+          "id": "color",
+          "label": "Color"
+        },
+        {
+          "type": "color",
+          "id": "border_color",
+          "label": "Border color"
+        },
+        {
+          "type": "color",
+          "id": "background_color",
+          "label": "Background color"
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "image-banner"
+    }
+  ]
+}
+{% endschema %}
+
+{% stylesheet %}
+{% endstylesheet %}
+
+{% javascript %}
+{% endjavascript %}
