--- a/sections/notification-bar.liquid
+++ b/sections/notification-bar.liquid
@@ -18,20 +18,19 @@
   "settings": [
     {
       "type": "text",
-      "label": "Notification Text",
-      "id": "notification_text"
+      "id": "notification_text",
+      "label": "Notification Text"
     },
     {
       "type": "url",
-      "label": "Link URL",
-      "id": "linkUrl"
+      "id": "linkUrl",
+      "label": "Link URL"
     },
     {
       "type": "text",
-      "label": "Sub Notification Text",
-      "id": "sub_notification_text"
+      "id": "sub_notification_text",
+      "label": "Sub Notification Text"
     }
-    
   ],
   "presets": [
     {
