--- a/sections/dev__flex-box.liquid
+++ b/sections/dev__flex-box.liquid
@@ -104,15 +104,42 @@
       "id": "margin_top_unit",
       "label": "Margin Top Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -127,15 +154,42 @@
       "id": "margin_right_unit",
       "label": "Margin Right Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -150,15 +204,42 @@
       "id": "margin_bottom_unit",
       "label": "Margin Bottom Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -173,15 +254,42 @@
       "id": "margin_left_unit",
       "label": "Margin Left Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" },
-        { "value": "auto", "label": "Auto (only for margins)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        },
+        {
+          "value": "auto",
+          "label": "Auto (only for margins)"
+        }
       ],
       "default": "px"
     },
@@ -196,14 +304,38 @@
       "id": "padding_top_unit",
       "label": "Padding Top Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -218,14 +350,38 @@
       "id": "padding_right_unit",
       "label": "Padding Right Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -240,14 +396,38 @@
       "id": "padding_bottom_unit",
       "label": "Padding Bottom Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
@@ -262,18 +442,41 @@
       "id": "padding_left_unit",
       "label": "Padding Left Unit",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "%", "label": "% (percentage)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "vw", "label": "vw (viewport width)" },
-        { "value": "vh", "label": "vh (viewport height)" },
-        { "value": "svw", "label": "SVW (Small Viewport Width)" },
-        { "value": "svh", "label": "SVH (Small Viewport Height)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "vw",
+          "label": "vw (viewport width)"
+        },
+        {
+          "value": "vh",
+          "label": "vh (viewport height)"
+        },
+        {
+          "value": "svw",
+          "label": "SVW (Small Viewport Width)"
+        },
+        {
+          "value": "svh",
+          "label": "SVH (Small Viewport Height)"
+        }
       ],
       "default": "px"
     },
-
     {
       "type": "header",
       "content": "Flexbox"
@@ -283,10 +486,22 @@
       "id": "flex_direction",
       "label": "Flex Direction",
       "options": [
-        { "value": "row", "label": "Row" },
-        { "value": "row-reverse", "label": "Row Reverse" },
-        { "value": "column", "label": "Column" },
-        { "value": "column-reverse", "label": "Column Reverse" }
+        {
+          "value": "row",
+          "label": "Row"
+        },
+        {
+          "value": "row-reverse",
+          "label": "Row Reverse"
+        },
+        {
+          "value": "column",
+          "label": "Column"
+        },
+        {
+          "value": "column-reverse",
+          "label": "Column Reverse"
+        }
       ],
       "default": "row"
     },
@@ -295,12 +510,30 @@
       "id": "align_items",
       "label": "Align Items",
       "options": [
-        { "value": "normal", "label": "Normal" },
-        { "value": "stretch", "label": "Stretch" },
-        { "value": "center", "label": "Center" },
-        { "value": "flex-start", "label": "Flex Start" },
-        { "value": "flex-end", "label": "Flex End" },
-        { "value": "baseline", "label": "Baseline" }
+        {
+          "value": "normal",
+          "label": "Normal"
+        },
+        {
+          "value": "stretch",
+          "label": "Stretch"
+        },
+        {
+          "value": "center",
+          "label": "Center"
+        },
+        {
+          "value": "flex-start",
+          "label": "Flex Start"
+        },
+        {
+          "value": "flex-end",
+          "label": "Flex End"
+        },
+        {
+          "value": "baseline",
+          "label": "Baseline"
+        }
       ],
       "default": "normal"
     },
@@ -309,12 +542,30 @@
       "id": "justify_content",
       "label": "Justify Content",
       "options": [
-        { "value": "space-between", "label": "Space Between" },
-        { "value": "space-around", "label": "Space Around" },
-        { "value": "center", "label": "Center" },
-        { "value": "flex-start", "label": "Flex Start" },
-        { "value": "flex-end", "label": "Flex End" },
-        { "value": "space-evenly", "label": "Space Evenly" }
+        {
+          "value": "space-between",
+          "label": "Space Between"
+        },
+        {
+          "value": "space-around",
+          "label": "Space Around"
+        },
+        {
+          "value": "center",
+          "label": "Center"
+        },
+        {
+          "value": "flex-start",
+          "label": "Flex Start"
+        },
+        {
+          "value": "flex-end",
+          "label": "Flex End"
+        },
+        {
+          "value": "space-evenly",
+          "label": "Space Evenly"
+        }
       ],
       "default": "flex-start"
     },
@@ -329,10 +580,22 @@
       "id": "row_gap_unit",
       "label": "Gap Unit For Row",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "%", "label": "% (percentage)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        }
       ],
       "default": "px"
     },
@@ -347,10 +610,22 @@
       "id": "column_gap_unit",
       "label": "Gap Unit For Column",
       "options": [
-        { "value": "px", "label": "px (pixels)" },
-        { "value": "em", "label": "em" },
-        { "value": "rem", "label": "rem (root em)" },
-        { "value": "%", "label": "% (percentage)" }
+        {
+          "value": "px",
+          "label": "px (pixels)"
+        },
+        {
+          "value": "em",
+          "label": "em"
+        },
+        {
+          "value": "rem",
+          "label": "rem (root em)"
+        },
+        {
+          "value": "%",
+          "label": "% (percentage)"
+        }
       ],
       "default": "px"
     },
@@ -359,9 +634,18 @@
       "id": "flex_wrap",
       "label": "Flex Wrap",
       "options": [
-        { "value": "nowrap", "label": "Don't Wrap" },
-        { "value": "wrap", "label": "Wrap" },
-        { "value": "wrap-reverse", "label": "Wrap Reverse" }
+        {
+          "value": "nowrap",
+          "label": "Don't Wrap"
+        },
+        {
+          "value": "wrap",
+          "label": "Wrap"
+        },
+        {
+          "value": "wrap-reverse",
+          "label": "Wrap Reverse"
+        }
       ],
       "default": "nowrap"
     }
